--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,10 @@
           <a class="brand" href="#">Jdogs</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Products", "/products"  %></li>
+              <li><%= link_to "Categories", "/categories"  %></li>
+              <li><%= link_to "Customers", "/customers"  %></li>
+              <li><%= link_to "Events", "/events"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -69,9 +70,10 @@
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
-                <li><%= link_to "Link1", "/path1"  %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
+                <li><%= link_to "Products", "/products"  %></li>
+                <li><%= link_to "Categories", "/categories"  %></li>
+                <li><%= link_to "Customers", "/customers"  %></li>
+                <li><%= link_to "Events", "/events"  %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
