Moved Products under Categories

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,11 +14,12 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= link_to category.id, category_path(category) %></td>
+        <td><%= category.id %></td>
         <td><%= category.name %></td>
-        <td><%= category.inventory %></td>
         <td><%=l category.created_at %></td>
         <td>
+          <%= link_to t('.items', :default => t("helpers.links.items")),
+                      products_path(category_id: category.id), :class => 'btn btn-mini' %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_category_path(category), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
