--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -36,3 +36,6 @@
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_product_path,
             :class => 'btn btn-primary' %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+            categories_path,
+            :class => 'btn' %>
