--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,11 +1,6 @@
 - model_class = Category
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.titleize
-
-%p
-  %strong= model_class.human_attribute_name(:name) + ':'
-  %br
-  = @category.name
+  %h1=@category.name
 
 .form-actions
   = link_to t('.back', :default => t("helpers.links.back")), categories_path, :class => 'btn'
