--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,11 @@
 <%= form_for @product, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
+    <%= f.label :category_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.select :category_id, @categories.all.collect {|c| [c.name, c.id]}, prompt: 'Choose a Category' %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'text_field' %>
