--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
           <a class="brand" href="#">Jdogs</a>
           <div class="container nav-collapse">
             <ul class="nav">
+              <li><%= link_to "Users", "/users"  %></li>
               <li><%= link_to "Categories", "/categories"  %></li>
               <li><%= link_to "Customers", "/customers"  %></li>
               <li><%= link_to "Events", "/events"  %></li>
@@ -69,6 +70,7 @@
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
+                <li><%= link_to "Users", "/users"  %></li>
                 <li><%= link_to "Categories", "/categories"  %></li>
                 <li><%= link_to "Customers", "/customers"  %></li>
                 <li><%= link_to "Events", "/events"  %></li>
